Fix image stretching on about page, fiddle with responsiveness

--- a/app/assets/stylesheets/base/global.scss
+++ b/app/assets/stylesheets/base/global.scss
@@ -9,7 +9,8 @@ html, body {
 
 
 section.about-page {
-    
+    display:flex;
+    justify-content:center;
     margin-top:5%;
     height:100%;
 }
@@ -17,8 +18,8 @@ section.about-page {
 div.about-page {
     background-image: image-url('image1.jpeg');
     background-size: 100% 100%;
-    height: 70%;
-    width: 50%;
+    min-height: 50%;
+    min-width: 30%;
     box-shadow: 5px 10px 25px;
     padding:5px;
     float:left;
@@ -28,21 +29,28 @@ div.about-page {
  div.about-text {
      display:inline-block;
      width: 30%;
+     height:fit-content;
      box-shadow: 5px 5px 15px;
      padding:10px;
      background-color: #6497b1;
-     font-family:Verdana, Helvetica, sans-serif;
+     font-family:Helvetica, sans-serif;
      color: #011f4b;
  }
 
+ 
+ h4 {
+     border-bottom: solid 1px black;
+     width:30%;
+ }
 
  @media screen and (max-width: 600px) {
     section.about-page {
-        text-align:center;
+        height:100%;
+        margin-top:40%;
     }
 
     div.about-page {
-        width:auto;
+        width:80%;
         float:none;
     }
 
@@ -120,6 +128,14 @@ div.avatar {
 @media screen and (max-width: 770px) {
     div.avatar {
         height:auto;
+        float:none;
+    
+    }
+}
+
+@media screen and (max-width: 770px) {
+    aside {
+        height:100%;
         float:none;
     
     }
